[package]
name = "nostr-preview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostr-sdk = "0.25.0"
rocksdb = "0.21.0"
serde = {version="1.0.193", features = ["derive"]}
tokio = {version = "1.35.0", features = ["full"] }
warp = "0.3.6"
